Add a link to open the graph directly by clicking it to make it easier to play with the javascript.

--- a/speedLogger.html
+++ b/speedLogger.html
@@ -2,6 +2,6 @@
 <head><title>speedLogger Results</title></head>
 <body>
 <h1 align="center">speedLogger Results</h1>
-<p align="center"><img src="speedLogger.svg"></img></p>
+<p align="center"><a href="speedLogger.svg"><img src="speedLogger.svg"></a></p>
 </body>
 </html>
